feat(sms): add sms and list sms commands
